--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mongoose": "4.8.7",
     "mongoose-mongodb-errors": "0.0.2",
     "multer": "1.3.0",
+    "node-sass": "^4.5.3",
     "nodemailer": "3.1.5",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
@@ -58,7 +59,6 @@
     "concurrently": "3.4.0",
     "css-loader": "0.27.3",
     "extract-text-webpack-plugin": "2.1.0",
-    "node-sass": "4.5.0",
     "nodemon": "1.11.0",
     "postcss-loader": "1.3.3",
     "sass-loader": "6.0.3",
